--- a/Front/waste_reco_front.css
+++ b/Front/waste_reco_front.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: url('path_to_uploaded_image.webp') no-repeat center center fixed;
+    background: url('background_img.webp') no-repeat center center fixed;
     background-size: cover;
     color: white;
     display: flex;
